--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -5,10 +5,10 @@ inputs:
         description: 'Whether to cache dependecies or not'
         requiered: false
         default: 'true'
-outupt:
+outupts:
     used-cache:
         description: 'Whether the cache was used.' 
-        value: ${{steps.install.outputs.cache}}
+        value: ${{ steps.install.outputs.cache }}
 runs: 
     using: 'composite'
     steps:
