--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -5,7 +5,7 @@ inputs:
         description: 'Whether to cache dependecies or not'
         requiered: false
         default: 'true'
-outupts:
+outputs:
     used-cache:
         description: 'Whether the cache was used.' 
         value: ${{ steps.install.outputs.cache }}
